Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriTextRettext.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, text> yoda
        text ret = yoda:useForce(one, two)
        output "passed"
     end
end
