Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRetIntObjFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, Integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
